Changelog #11 : fix Login page text-align glitch

--- a/src/Style/Login.css
+++ b/src/Style/Login.css
@@ -9,6 +9,9 @@
     background-color: rgba(0, 0, 0, 0.8);
     background-blend-mode: multiply;
 }
+.loginBoxheader{
+    text-align: center;
+}
 .login-heading{
     margin-block-start: 0.5em;
     margin-block-end: 0;
